--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@ width:50%;
   </div>
 </div>
 <div class="images">
-  <img src="img/images (4).jpg">
+  <img src="img/stand.jpg" width="100%">
 </div>
 
 
