--- a/login.htm
+++ b/login.htm
@@ -201,7 +201,7 @@ width:100%;
 </div>
 <img src="img/clogo.jpg" class="my">	
 <div class="loginbox">
-<img src="img/3.png" class="user">	
+<img src="img/download(1).jpg" class="user">	
 <h2>Log in here</h2>
 <form action="homepage.html">
 <p>User Name</p>
