--- a/login.htm
+++ b/login.htm
@@ -215,7 +215,7 @@ placeholder="Enter User name" required>
 </div>
 
 
-<script src="js/login.js"></script>
+<script src="login.js"></script>
 	
 </body>
 
